--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 
 </head>
 
-<body class="bg-[#d6e2f0] flex flex-col min-h-screen">
-  <div class="max-w-[1440px] mb-auto  justify-center mx-auto bg-green-100">
-
+<body class="bg-[#d6e2f0] flex items-center justify-center h-screen">
+  <div class="max-w-[15rem] bg-white rounded-md p-2">
+    <div class="flex items-center justify-center">
+      <img class=" rounded-md" src="/images/image-qr-code.png" alt="">
+    </div>
+    <div class="mt-4 text-center"> 
+      <h3 class="font-bold">Improve your front-end skills by building projects</h3>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
   </div>
 
-  <footer class="h-10">
+  <!-- <footer class="h-10">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Ye Naing Tun</a>.
-  </footer>
+  </footer> -->
 </body>
 
 </html>
